@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2019, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,7 +26,7 @@ import java.lang.annotation.*;
 /**
  * @test
  * @bug 8006547
- * @compile NoTargetOnContainer.java
+ * @compile --enable-preview -source ${jdk.version} NoTargetOnContainer.java
  */
 
 @interface FooContainer {
@@ -42,6 +42,7 @@ import java.lang.annotation.*;
     ElementType.PACKAGE,
     ElementType.ANNOTATION_TYPE,
     ElementType.FIELD,
+    ElementType.RECORD_COMPONENT
 })
 @Repeatable(FooContainer.class)
 @interface Foo {}
